Implements Role and Permissions for Health Record Types
